--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "start": "node src/server.js",
-    "watch": "nodemon src/server.js"
+    "watch": "nodemon src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
