--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "pm2": "^5.4.2"
