--- a/package.json
+++ b/package.json
@@ -16,11 +16,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.7.7",
-    "mongoose": "^8.7.0",
-    "morgan": "^1.10.0",
-    "pm2": "^5.4.2"
-  }
+  "description": ""
 }
