--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,14 @@
   },
   "description": "NASA Mission Control API",
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0",
+    "morgan": "^1.10.0",
+    "pm2": "^5.4.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
